tests/snapshots/libsml_testing__files@DZG_DVS-7420.2V.G2_mtr0.bin.snap
---
source: tests/libsml-testing.rs
assertion_line: 80
expression: s
input_file: tests/libsml-testing/DZG_DVS-7420.2V.G2_mtr0.bin
---
Ok(235)
Err(DiscardedBytes(56))

