tests/snapshots/libsml_testing__files@ISKRA_MT631-D2A51-V22-K0z_with_PIN.bin.snap
---
source: tests/libsml-testing.rs
assertion_line: 80
expression: s
input_file: tests/libsml-testing/ISKRA_MT631-D2A51-V22-K0z_with_PIN.bin
---
Ok(236)
Ok(236)
Ok(236)
Ok(236)

