tests/snapshots/libsml_testing__files@ISKRA_MT691_eHZ-MS2020.bin.snap
---
source: tests/libsml-testing.rs
assertion_line: 80
expression: s
input_file: tests/libsml-testing/ISKRA_MT691_eHZ-MS2020.bin
---
Ok(198)
Ok(198)
Ok(198)
Ok(198)
Ok(198)
Ok(198)
Ok(198)
Ok(198)
Ok(198)
Ok(197)
Ok(198)
Ok(198)
Ok(198)
Ok(198)
Ok(198)
Ok(198)
Ok(198)
Ok(198)
Err(DiscardedBytes(208))

