tests/snapshots/libsml_testing__files@ITRON_OpenWay-3.HZ.bin.snap
---
source: tests/libsml-testing.rs
assertion_line: 80
expression: s
input_file: tests/libsml-testing/ITRON_OpenWay-3.HZ.bin
---
Ok(226)

