tests/snapshots/libsml_testing__files@dzg_dwsb20_2th_2byte.bin.snap
---
source: tests/libsml-testing.rs
assertion_line: 80
expression: s
input_file: tests/libsml-testing/dzg_dwsb20_2th_2byte.bin
---
Err(DiscardedBytes(81))
Ok(234)
Ok(234)
Ok(234)
Ok(234)
Ok(234)
Ok(234)
Ok(234)
Ok(234)
Ok(234)
Ok(234)
Ok(234)
Ok(234)
Ok(234)
Ok(234)
Ok(234)
Err(DiscardedBytes(235))

