tests/snapshots/libsml_testing__files@dzg_dwsb20_2th_3byte.bin.snap
---
source: tests/libsml-testing.rs
assertion_line: 80
expression: s
input_file: tests/libsml-testing/dzg_dwsb20_2th_3byte.bin
---
Ok(235)
Ok(235)
Err(InvalidMessage { checksum_mismatch: (45849, 40211), end_esc_misaligned: true, num_padding_bytes: 1 })
Ok(235)
Ok(235)
Ok(235)
Ok(235)
Ok(235)
Ok(235)
Ok(235)
Ok(235)
Ok(235)
Err(InvalidMessage { checksum_mismatch: (48183, 52421), end_esc_misaligned: true, num_padding_bytes: 1 })
Ok(235)
Ok(235)
Ok(235)
Err(DiscardedBytes(68))

